--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,29 +1,26 @@
 <div class="user-details">
-  <h1> Featured Projects </h1>
+	<h1>Featured Projects</h1>
 </div>
+
 <div class="user-projects">
-  <div class="images-right">
-    <img alt="mountains" src="{{ "/assets/img/mountains.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
-  </div>
+	<div class="images-right">
+		<a href="https://github.com/koreanhong/ff.gg"><img class="projectsImg" alt="mountains" src="../assets/img/main.jpg" /></a>
+	</div>
+	<div class="contents">
+		<h3>FF.GG</h3>
+<!-- 		<ul> -->
+<!-- 			<li>개발기간 :2019.10.16 - 2019.12.09 </li> -->
+			<p class="contentsTitle">[개발기간]</p>
+			<p class="contentsPeriod">2019.10.16 - 2019.12.09 </p>
+<!-- 		</ul> -->
+		<p class="contentsTitle">[소개]</p>
+		<p class="contentsWrite">피파온라인4 사용자의 닉네임을 검색해 사용자의 선수정보, 승패여부, 트레이드 목록 등의 정보를 알 수 있는 피파온라인 전적검색 웹사이트 </p>
+		<p class="contentsTitle">[제작이유]</p>
+		<p class="contentsWrite">현재 피파온라인4는 단순히 경기를 치뤄 이기고 지는것에 즐거움을 느끼는것 뿐만 아니라
+			더 나아가 선수를 분석하여 선수단을 구성하고 포메이션, 스쿼드 등 전략적으로 피파온라인4를 즐기는 유저가 많아짐.
+		 </p>
+		<a class="project-link" href="#">맨위로</a>
+	</div>
 </div>
-<div class="user-projects">
-  <div class="images-left">
-    <img alt="mountains" src="{{ "/assets/img/skate.jpg" | prepend: site.baseurl }}" />
-  </div>
-  <div class="contents-right">
-    <h3> Project Title </h3>
-    <ul>
-      <li> Featured Skills</li>
-    </ul>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    <a class="project-link" href="#">Check it out</a>
-  </div>
-</div>
+
+
