--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,8 @@
 <footer class="footer">
-    <p>&copy; {{site.username}}</p>
-    <p>Build with Jekyll and <span class="love">❤</span> by <a href="https://github.com/nrandecker">Nathan Randecker</a></p>
+    <p>&copy; CONTACT</p>
+    
+    <p>phone : 010 - 6385 - 3385</p>
+    <p>Email : hyeonki1994@gmail.com</p>
 </footer>
 <script src="//cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <script src="{{ "/assets/js/sweet-scroll.min.js" | prepend: site.baseurl }}"></script>
