--- a/_includes/about.html
+++ b/_includes/about.html
@@ -57,7 +57,7 @@
 		</table>
     </div>
     <div class="tech">
-      <h2>Server/Technolohy</h2>
+      <h2>Server/Technoloy</h2>
 <!--       <i class="devicon-git-plain"></i> -->
 <!--       <i class="devicon-gulp-plain colored"></i> -->
 <!--       <i class="devicon-atom-original-wordmark"></i> -->
