--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,14 +1,29 @@
  <div class="user-details">
 <!--   <h1> My Expertise </h1> -->
   <h1> About Me</h1><br>
-  <h1> 발전하는 개발자</h1>
+  <h1>즐기는 개발자</h1>
 <!--   <p> {{site.user_description}} </p> -->
 
-<p class="myIntro">
-저의 목표는 발전하는 개발자입니다. 교육과정 중 프로젝트를 진행하면서 개인의 역량이 프로젝트 성패에 큰 영향을 끼치는지 직접 느꼈습니다. 
-그래서 개인적으로 맡은 임무는 끝까지 해결하여 신뢰를 쌓을 수 있도록 노력하였습니다. 결국, 개발자는 자기가 맡은 업무를 성공적으로 수행할 수 있는 능력을 키워나가야 한다고 생각합니다. 
-그러기 위해서는 본인이 가지고 있는 역량에 안주하지 않고 계속해서 공부하고 발전하여 본인의 역량을 끊임없이 키워 나갈 수 있는 개발자가 되어야 한다고 생각합니다.
-</p>
+<div class="myIntro">
+<!-- 저의 목표는 발전하는 개발자입니다. 교육과정 중 프로젝트를 진행하면서 개인의 역량이 프로젝트 성패에 큰 영향을 끼치는지 직접 느꼈습니다.  -->
+<!-- 그래서 개인적으로 맡은 임무는 끝까지 해결하여 신뢰를 쌓을 수 있도록 노력하였습니다. 결국, 개발자는 자기가 맡은 업무를 성공적으로 수행할 수 있는 능력을 키워나가야 한다고 생각합니다.  -->
+<!-- 그러기 위해서는 본인이 가지고 있는 역량에 안주하지 않고 계속해서 공부하고 발전하여 본인의 역량을 끊임없이 키워 나갈 수 있는 개발자가 되어야 한다고 생각합니다. -->
+<span class="myIntro_first">나는 어떤 개발자가 되어야 할까?..</span>
+<span>개발공부를 해가면서 어떤 개발자가 정말 참된 개발자일까 라고 생각해보았습니다. 감각적으로 뛰어난 개발자, 끊임없이 발전하는 개발자 등이 있겠지만 
+결국 개발을 <span class="myIntro_point">'즐길 수 있는 개발자'</span> 가 되어야 한다고 생각했습니다. 컴퓨터 앞에 앉았을때 즐거운 마음으로 개발을 할수 있는 개발자가 되고 싶습니다.
+</span>
+<br>
+<br>
+<span>저는 우연히 유튜브에서 개발자라는 직업을 소개해주는 영상을 보고 처음으로 흥미를 느끼게 되었습니다. 그래서 처음으로 JAVA를 공부하기 시작했습니다. 
+<span class="myIntro_point2">비전공자</span>
+에
+<span class="myIntro_point3">기초지식</span>
+도 없음에도 불구하고
+알면 알수록 너무나도 재미가 있었습니다. 그래서 '자바 웹 개발자 양성' 이라는 국비지원 교육을 통해 공부를 본격적으로 시작하게 되었습니다. 현재는 교육과정에서 배울 수 없었던 새로운 언어와 기술 등을 공부하고
+최종적으로 즐길 수 있는 개발자가 되기 위해 열심히 발전하고 있습니다. 
+</span>
+
+</div>
 </div>
 
 
