--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -15,10 +15,21 @@
 <!-- 		</ul> -->
 		<p class="contentsTitle">[소개]</p>
 		<p class="contentsWrite">피파온라인4 사용자의 닉네임을 검색해 사용자의 선수정보, 승패여부, 트레이드 목록 등의 정보를 알 수 있는 피파온라인 전적검색 웹사이트 </p>
-		<p class="contentsTitle">[제작이유]</p>
-		<p class="contentsWrite">현재 피파온라인4는 단순히 경기를 치뤄 이기고 지는것에 즐거움을 느끼는것 뿐만 아니라
-			더 나아가 선수를 분석하여 선수단을 구성하고 포메이션, 스쿼드 등 전략적으로 피파온라인4를 즐기는 유저가 많아짐.
+		<p class="contentsTitle">[사용언어 및 기술]</p>
+		<p class="contentsWrite">
+		 <b class="mini_title">Language</b> : JAVA, jquery, JavaScript
 		 </p>
+		 <p>
+		 <b class="mini_title">DataBase</b> : MongoDB, mySql
+		 </p>
+		 <p>
+		 <b class="mini_title">IDE</b> : Eclipse
+		 </p>
+		 <p>
+		 <b class="mini_title">Server & Technology</b> : MyBatis,Spring,ajax,nodejs,Tomcat
+		 </p>
+		 <p class="contentsTitle">[개발과정]</p>
+		 <p>ajax이용, API를 통해 데이터 수집 후 jquery로 동적페이지 출력하고, 게임 내 선수정보 및 랭킹 크롤링하여 페이지 출력, springMVC패턴 사용 게시판 구현 </p>
 		<a class="project-link" href="#">맨위로</a>
 	</div>
 </div>
